--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INE México - Instituto Nacional Electoral</title>
-    <link rel="stylesheet" href="Source/styles.css">
+    <link rel="stylesheet" href="Source/style.css">
 </head>
 <body>
     <!-- Header -->
