Eliminar elementos de texto del logo y mantener solo la imagen del logo INE en el encabezado

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <header class="header">
         <div class="nav-container">
             <div class="logo">
-                <div class="logo-icon">INE</div>
-                <div class="logo-text">
-                    <h1>INE</h1>
-                    <p>Instituto Nacional Electoral</p>
-                </div>
+    <img src="https://micorreo.ine.mx/skins/elastic/images/ine-logo.png?s=1606950775" alt="Logo INE" style="height:82px;">
             </div>
             
             <nav>
