--- a/index.html
+++ b/index.html
@@ -352,6 +352,54 @@
         </div>
     </footer>
 
+    <!-- Privacy Popup -->
+    <style>
+      #privacidad-popup {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: #fff;
+        border-top: 1px solid #ccc;
+        box-shadow: 0 -2px 8px rgba(0,0,0,0.08);
+        padding: 16px 24px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1000;
+        font-size: 15px;
+      }
+      #privacidad-popup button {
+        background: #e2001a;
+        color: #fff;
+        border: none;
+        padding: 8px 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: bold;
+      }
+    </style>
+
+    <div id="privacidad-popup">
+      <span>
+        Este sitio utiliza cookies y trata tus datos conforme al 
+        <a href="aviso-privacidad.html" target="_blank">Aviso de Privacidad</a>.
+      </span>
+      <button onclick="aceptarPrivacidad()">Aceptar</button>
+    </div>
+
+    <script>
+      function aceptarPrivacidad() {
+        document.getElementById('privacidad-popup').style.display = 'none';
+        localStorage.setItem('privacidadAceptada', 'true');
+      }
+      window.onload = function() {
+        if (localStorage.getItem('privacidadAceptada') === 'true') {
+          document.getElementById('privacidad-popup').style.display = 'none';
+        }
+      }
+    </script>
+
     <script>
         // Modal Functions
         function openModal(modalType) {
