Add acceptance checkboxes for privacy and confidentiality notices

--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                 <p><strong>Unidad de Transparencia del INE</strong><br>
                 Correo: <a href="mailto:transparencia@ine.mx">transparencia@ine.mx</a><br>
                 Teléfono: 01 800 433 2000</p>
+                <input id="acceptInput" type="checkbox">
+                <label for="acceptInput" class="accept-label">He leído y acepto el Aviso de Privacidad</label>
             </div>
         </div>
     </div>
@@ -236,6 +238,8 @@
                     <li>Responsabilidades civiles</li>
                     <li>Consecuencias penales según la legislación aplicable</li>
                 </ul>
+                <input id="acceptInputC" type="checkbox">
+                <label for="acceptInputC" class="accept-labelC">He leído y acepto los terminos de confidencialidad</label>
             </div>
         </div>
     </div>
